--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -22,8 +22,8 @@ title: ?!?
 email: kriscao AT google DOT com
 description: >- # this means to ignore newlines until "baseurl:
   Some thoughts about NLP
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/blog" # the subpath of your site, e.g. /blog
+url: "http://kriscao.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: kroscoo
 github_username:  kriscao
 
