--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: S -> NP VP
-email: cao.kris AT google DOT com
+email: cao.kris AT gmail DOT com
 description: >- # this means to ignore newlines until "baseurl:"
   A man's work is nothing but this slow trek to rediscover, through the detours
   of art, those two or three great and simple images in whose presence his
